# jet_windows_workspace

./: .gitignore  _copy_for_prompt.py  _utils_copy_for_prompt.py  freeze-versions.ps1  requirements.txt
python_scripts/: Get-HighVRAMUsageProcesses.ps1  Remove-DuplicatePath.ps1  Tail-LlamaServerLogs.ps1  check_numpy.py  example-embeddinggemma-300m_1.py  monitor_gpu.py  monitor_gpu_table.py  pyproject.toml  requirements-base.txt
python_scripts/audio/: convert_audio_to_mono_16k.ps1  convert_video_to_mono_16k.ps1  extract_audio_segment.py
python_scripts/base/: check_ctranslate2.py  check_cublas.py  check_cuda.py  check_onnx.py  check_os.py  find_cudnn.py
python_scripts/client/: whisper_batch_client.py  whisper_batch_examples.py
python_scripts/extraction/: html_text_extractor.py  paragraph_extractor.py  sentence_extractor.py  sentence_extractor_onnx.py  sentence_extractor_probs.py  test_html_text_extractor.py  wtpsplit_demo.py
python_scripts/jet_scripts/: download_hf_gguf_model.py  download_hf_model.py
python_scripts/ner/: japanese_ner.py
python_scripts/nlp/: japanese_ner2.py  japanese_nlp.py  japanese_nlp_nagisa.py  jobs_ner_demo.py  ner.py  test_japanese_nlp.py
python_scripts/ocr/: convert-video-to-srt.py  convert_video_to_srt.py  extract-subtitles.py  extract-video-frames.py  extract_subtitles.py  extract_video_frames.py  sync_torch_cudnn_to_paddle.ps1
python_scripts/powershell/: Activate-Venv.ps1  Add-SystemPath.ps1  Check-SystemPaths.ps1  Convert_ModelToGGUF.ps1  Download-HuggingfaceModel.ps1  Start-LlamaServer-Embedding.ps1  Start-LlamaServer-Llm.ps1  (+1 more)
(+460 files in other folders)
