[project]
name = "python-scripts"
version = "0.1.0"
description = ""
authors = [
    {name = "Jethro Estrada",email = "jethroestrada237@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers (==5.1.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
